Change street number translation. Add postal code to autocomplete.

--- a/view/frontend/templates/customer/address/edit.phtml
+++ b/view/frontend/templates/customer/address/edit.phtml
@@ -48,7 +48,7 @@ $regionValidationClass = $viewModel->addressGetAttributeValidationClass('region'
 $streetLabels = [
     __('Street'),
     __('Building Number'),
-    __('House Number')
+    __('Apartment Number')
 ]
 ?>
 <form class="form-address-edit"
